[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/map/Door.png" type="Texture" id=1]
[ext_resource path="res://src/world/Door.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/open-door.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/sounds/close-door.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 13, 20 )

[sub_resource type="OccluderPolygon2D" id=2]
polygon = PoolVector2Array( -2, -20, -2, 20, 2, 20, 2, -20 )

[node name="Door" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 10, -4 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="CloseDoor" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -5.0
attenuation = 10.0

[node name="OpenDoor" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0
attenuation = 10.0

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource( 2 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
